--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -99,6 +99,12 @@ h2 {
         }
     }
     tbody>tr {
+        &.deleting {
+            background: #ffd9d9;
+            td {
+                opacity: 0.5
+            }
+        }
         .btn {
             opacity: 0.15;
         }
