--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -122,7 +122,7 @@ h2 {
                 opacity: 0.5
             }
         }
-        .btn {
+        .td_btn .btn {
             opacity: 0.15;
         }
         &:hover {
@@ -201,7 +201,6 @@ h2 {
     margin-bottom: 20px;
     margin-right: 5px;
     height: 30px;
-    float: left;
 }
 .panel_user {
     width: 300px;
