--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -51,6 +51,9 @@ h2 {
         font-size: 35px;
     }
 }
+.positioned {
+    position: relative;
+}
 .nav.navbar-nav li a.active {
     color: #555;
     background-color: #e7e7e7;
